[package]
name = "flash_tmux"
version = "0.2.1"
edition = "2024"
description = "A tmux plugin inspired by folke/flash.nvim and Kristijan/flash-copy.tmux to quickly copy text from your tmux pane."
readme = "README.md"
repository = "https://github.com/iovis/flash.tmux"
license = "MIT"
keywords = ["cli", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
unicode-width = "0.2.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
